# aleff1

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  run_tests.sh  run_tests_one.sh  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: test_bench.py
docs/source/: conf.py  examples.rst  index.rst
docs/source/_static/: custom.css
docs/source/api/: effects.rst  wind.rst
examples/: README.md  demo_amb.py  demo_autodiff.py  demo_backprop.py  demo_nqueens.py  demo_probability.py  demo_record_replay.py  demo_shallow_state.py  demo_shift_reset.py  demo_transaction.py
src/aleff/: __init__.py  _aleff.c  _aleff.pyi
src/aleff/_multishot/v1/: Makefile  __init__.py  _aleff.c  effects.py  handlers.py  intf.py  misc.py  utils.py  wind.py  winds.py
src/aleff/_oneshot/: __init__.py
src/aleff/_oneshot/v1/: __init__.py
src/aleff/_oneshot/v2/: __init__.py  effect.py
src/aleff/_oneshot/v3/: __init__.py  effect.py
src/aleff/_oneshot/v4/: effect.py
src/aleff/_oneshot/v6/: effect.py
src/aleff/_oneshot/v7/: effects.py  intf.py  misc.py
src/aleff/_oneshot/v8/: __init__.py  effects.py  handlers.py  intf.py  misc.py  utils.py
src/aleff/_oneshot/v8_1/: effects.py  handlers.py  intf.py
src/aleff/multishot/: __init__.py
src/aleff/oneshot/: __init__.py
src/aleff/v1/: __init__.py  handlers.py  intf.py  utils.py
src/aleff1/: __init__.py  _aleff.c
src/aleff1/v1/: effect.py
src/aleff1/v4/: __init__.py
src/aleff1/v5/: __init__.py  effect.py
src/aleff1/v7/: __init__.py  handlers.py
tests/: test_aleff_c.py  test_async.py  test_dynamic_wind.py  test_effect_composition.py  test_exception.py  test_exception_oneshot.py  test_handler_effects.py  test_handler_effects_oneshot.py  test_multishot.py  test_shallow.py  test_shallow_oneshot.py  test_sync.py  test_utils.py  test_v7.py  test_v7_async.py  test_wind_range.py
