[project]
name = "aleff"
version = "0.1.0"
description = "Algebraic effects for Python — deep and shallow, stateful, composable, multi-shot handlers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "hnmr" },
]
keywords = [
    "Python",
    "greenlet",
    "algebraic-effects",
    "effects",
    "effect systems",
    "delimited-continuations",
    "multi-shot continuations",
    "stateful handlers",
    "deep handlers",
    "shallow handlers",
    "composable handlers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "greenlet>=3.3.2",
]

[project.urls]
Homepage = "https://github.com/hnmr293/aleff"
Repository = "https://github.com/hnmr293/aleff"
Issues = "https://github.com/hnmr293/aleff/issues"

[dependency-groups]
dev = [
    "gdb-mcp",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
gdb-mcp = { git = "https://github.com/hnmr293/gdb-mcp" }
